mobile view text selection fixing trial 2

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,9 @@
   body {
     @apply bg-[#06202A] text-gray-300;
   }
+  p {
+    @apply active:pointer-events-none sm:active:pointer-events-auto;
+  }
 }
 
 @layer utilities {
